# micro

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  git_changes.txt  micro.sln
.github/workflows/: cd-dev.yml  cd-prod.yml  ci.yml
apps/backend/: Dockerfile  README.md
apps/header/: Dockerfile  package-lock.json  package.json  vite.config.js
apps/trending/: package-lock.json  package.json  vite.config.js
dbs/: README.md
dbs/clickhouse/: Dockerfile
dbs/mongo/: Dockerfile
dbs/mysql/: Dockerfile
dbs/postgres/: Dockerfile
deploy/: docker-compose.core.yml  docker-compose.services.yml  docker-compose.tools.yml
docs/: databases-map.md  voip-roadmap.md
host/: Dockerfile  index.html  main.js  vite.config.js
services/clojure-etl/: Dockerfile  README.md  project.clj
services/cpp-hardware/: CMakeLists.txt  Dockerfile  README.md
services/crystal-iot/: Dockerfile  README.md  shard.yml  shards.yml
services/deno-functions/: Dockerfile  README.md  server.ts
services/dotnet-identity/: Dockerfile  Program.cs  README.md  dotnet-identity.csproj
services/elixir-messaging/: Dockerfile  README.md  mix.exs
services/go-gateway/: Dockerfile  README.md  go.mod
services/haskell-compliance/: Dockerfile  Main.hs  README.md  haskell-compliance.cabal
services/java-accounting/: Dockerfile  README.md  pom.xml
services/kotlin-orders/: Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
services/python-forecast/: .env.example  Dockerfile  README.md  pyproject.toml
services/python-forecast/src/: main.py
tools/: README.md
(+76 files in other folders)
