[tool.poetry]
name = "python-forecast"
version = "0.1.0"
description = "FastAPI service for weather/ML forecasts"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
